fixed spacing.css (padding 3rem)

--- a/04-14/task2/spacing.css
+++ b/04-14/task2/spacing.css
@@ -169,25 +169,25 @@
 }
 
 .p-3 {
-  padding: 2rem;
+  padding: 3rem;
 }
 .px-3 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 .py-3 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 .pt-3 {
-  padding-top: 2rem;
+  padding-top: 3rem;
 }
 .pr-3 {
-  padding-right: 2rem;
+  padding-right: 3rem;
 }
 .pb-3 {
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
 }
 .pl-3 {
-  padding-left: 2rem;
+  padding-left: 3rem;
 }
